package(default_visibility=["//visibility:public"])
load("@angular//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//sass:sass.bzl", "sass_library")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_config")

ts_config(
  name = "tsconfig",
  src = ":tsconfig-build.json",
  deps = ["//src/cdk:tsconfig-build.json"],
)

sass_library(
  name = "a11y_scss_lib",
  srcs = glob(["**/_*.scss"]),
)

ng_module(
  name = "a11y",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/cdk/a11y",
  deps = [
    "//src/cdk/coercion",
    "//src/cdk/keycodes",
    "//src/cdk/platform",
    "@rxjs",
  ],
  tsconfig = ":tsconfig",
)
