package(default_visibility=["//visibility:public"])
load("@angular//:index.bzl", "ng_module")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_config")

ts_config(
  name = "tsconfig",
  src = ":tsconfig-build.json",
  deps = ["//src/cdk:tsconfig-build.json"],
)

ng_module(
  name = "bidi",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/cdk/bidi",
  deps = ["@rxjs"],
  tsconfig = ":tsconfig",
)
